Refactorizando método principal ejecución por navegadores